# text-cipher

./: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/: App.tsx  index.tsx
src/: App.tsx  lib.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
static/: index.html
